--- a/sftp-config.json
+++ b/sftp-config.json
@@ -16,7 +16,7 @@
 
     "host": "login-course.engin.umich.edu",
     "user": "ryanmars",
-    "password": "RDM4900!!!",
+    //"password": "RDM4900!!!",
     //"port": "22",
     
     "remote_path": "/home/ryanmars/EECS 280/Project 5",
